feat: migrate to LMAX Disruptor